--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -28,6 +28,8 @@
     background-color: white;
     padding: 14px 48px;
     margin-bottom: 40px;
+    border-radius: 5px;
+    cursor: pointer;
 }
 .right{
     width: 75%;
@@ -39,4 +41,37 @@
     color: #5861AE;
     font-size: 32px;
     padding-top: 60px;
+}
+
+.d1{
+    display: flex;
+}
+
+.input{
+    width: 35%;
+    border: 0;
+    border-bottom: 1px solid #989898;
+    padding-bottom: 10px;
+    margin-right: 60px;
+    margin-bottom:50px;
+    background-color: #F8F9FF;
+}
+
+.label{
+   display: inline-block;
+   padding-left: 150px;
+   color: #5861AE;
+   font-size: 14px;
+   margin-top: 10px;
+}
+
+.regbtn{
+    display: block;
+   background-color: #5861AE;
+   color: white;
+   padding: 14px 43px;
+   margin:30px 0px 0px 320px;
+   border-radius: 5px;
+   cursor: pointer;
+   border: none;
 }
