Laundary Cart projects completed here.

--- a/src/components/Border.css
+++ b/src/components/Border.css
@@ -1,7 +1,8 @@
+
 .border{
     color: white;
     background-color: #182838;
     border: 1px solid #707070;
-    height: 10%;
+    height: 54.5px;
     text-align: center;
 }
