--- a/src/components/Homepage/Nav.css
+++ b/src/components/Homepage/Nav.css
@@ -4,29 +4,33 @@ body{
 .header{
     display: flex;
     justify-content: space-between;
-    height: 12.5vh;
+    height: 10vh;
     box-shadow: 0 5px 15px -10px #ccc;
     margin-top: 0;
-    
+    /* border: 2px solid red; */
 }
 .ul li{
     list-style-type: none;
     display: inline-block;
     margin-left: 10px;
-    padding: 30px;
+    padding: 28.5px;
     font-size: 14px;
-
+    /* border: 2px solid green; */
 }
-
+.ul{
+    margin: 0;
+}
 .side-name{
     margin-left: 90px;
     color: #5861AE;
     font-size: 20px;
-    padding: 30px;
+    padding: 5px;
+    font-weight: bold;
+    /* border: 2px solid green; */
 }
 
 .ul :last-child{
     background-color: #5861AE;
     color: #FFFFFF;
-    
+ 
 }
